// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GradientMap (a) cosine palette path > rainbow: cosine palette + strength compose, no mixColors, no RTT > cosine-final-pass 1`] = `
"fn gradientMapCompose(color: vec4f, mapped: vec3f, strength: f32) -> vec4f {
  let outRgb = mix(color.xyz, mapped, vec3f(strength, strength, strength));
  return vec4f(outRgb, color.w);
}

fn genBody(uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, 0.5f, 1f);
}

fn gradientMapCosine(t: f32, phase: f32, pa: vec3f, pb: vec3f, pc: vec3f, pd: vec3f) -> vec3f {
  let arg = ((((pc * t) + pd) + vec3f(phase, phase, phase)) * 6.283185307179586f);
  let mapped = (pa + (pb * cos(arg)));
  return clamp(mapped, vec3f(), vec3f(1));
}

fn gradientMapT(color: vec4f, black: f32, white: f32, contrast: f32) -> f32 {
  let luma = dot(color.xyz, vec3f(0.2125999927520752, 0.7152000069618225, 0.0722000002861023));
  let range = max((white - black), 1e-4f);
  var t = clamp(((luma - black) / range), 0f, 1f);
  t = clamp((((t - 0.5f) * contrast) + 0.5f), 0f, 1f);
  return t;
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct struct_1 {
  colorLow: vec4f,
  colorMid: vec4f,
  colorHigh: vec4f,
  speed: f32,
  contrast: f32,
  blackPoint: f32,
  whitePoint: f32,
  strength: f32,
  colorSpace: f32,
  _opacity: f32,
}

struct padded_1 {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct struct_2 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_gm: struct_1,
  n_gen: padded_1,
  _sys: struct_2,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  var composed_0 = gradientMapCompose(genBody(uv), gradientMapCosine(gradientMapT(genBody(uv), uniforms.n_gm.blackPoint, uniforms.n_gm.whitePoint, uniforms.n_gm.contrast), (uniforms.n_gm.speed * uniforms._sys.time), vec3f(0.5, 0.5, 0.5), vec3f(0.5, 0.5, 0.5), vec3f(1.0, 1.0, 1.0), vec3f(0.0, 0.333, 0.667)), uniforms.n_gm.strength);
  return vec4f(linearToSrgb(tone_linear(composed_0.rgb)), composed_0.a);
}"
`;

exports[`GradientMap (b) custom colors path > custom: 3-stop cyclic mixColors + select in the compile-time colorSpace > custom-final-pass 1`] = `
"fn gradientMapCompose(color: vec4f, mapped: vec3f, strength: f32) -> vec4f {
  let outRgb = mix(color.xyz, mapped, vec3f(strength, strength, strength));
  return vec4f(outRgb, color.w);
}

fn genBody(uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, 0.5f, 1f);
}

fn gradientMapSelect(seg0: vec4f, seg1: vec4f, seg2: vec4f, i: f32) -> vec4f {
  let upper = select(seg2, seg1, (i < 2f));
  return select(upper, seg0, (i < 1f));
}

fn p3ToSRGB(p3: vec3f) -> vec3f {
  let r = (((p3.x * 1.2249401f) - (p3.y * 0.2249404f)) - (p3.z * 0f));
  let g = (((p3.x * -0.0420569f) + (p3.y * 1.0420571f)) + (p3.z * 0f));
  let b = (((p3.x * -0.0196376f) - (p3.y * 0.0786361f)) + (p3.z * 1.0982735f));
  return vec3f(r, g, b);
}

fn rgbToOklab(rgb: vec3f) -> vec3f {
  let r = rgb.x;
  let g = rgb.y;
  let b = rgb.z;
  let l = (((r * 0.4122214708f) + (g * 0.5363325363f)) + (b * 0.0514459929f));
  let m = ((r * 0.2119034982f) + ((g * 0.6806995451f) + (b * 0.1073969566f)));
  let s = (((r * 0.0883024619f) + (g * 0.2817188376f)) + (b * 0.6299787005f));
  let l_ = (sign(l) * pow(abs(l), 0.3333333333333333f));
  let m_ = (sign(m) * pow(abs(m), 0.3333333333333333f));
  let s_ = (sign(s) * pow(abs(s), 0.3333333333333333f));
  return vec3f((((l_ * 0.2104542553f) + (m_ * 0.793617785f)) - (s_ * 0.0040720468f)), (((l_ * 1.9779984951f) - (m_ * 2.428592205f)) + (s_ * 0.4505937099f)), (((l_ * 0.0259040371f) + (m_ * 0.7827717662f)) - (s_ * 0.808675766f)));
}

fn oklabToOklch(lab: vec3f) -> vec3f {
  let L = lab.x;
  let a = lab.y;
  let b = lab.z;
  let C = sqrt(((a * a) + (b * b)));
  let h = atan2(b, a);
  return vec3f(L, C, h);
}

fn awMix(a: vec3f, b: vec3f, wA: f32, wB: f32, sw: f32) -> vec3f {
  return (((a * wA) + (b * wB)) / sw);
}

fn oklchToOklab(lch: vec3f) -> vec3f {
  let L = lch.x;
  let C = lch.y;
  let h = lch.z;
  return vec3f(L, (C * cos(h)), (C * sin(h)));
}

fn oklabToRgb(lab: vec3f) -> vec3f {
  let L = lab.x;
  let a = lab.y;
  let b = lab.z;
  let l_ = ((L + (a * 0.3963377774f)) + (b * 0.2158037573f));
  let m_ = ((L - (a * 0.1055613458f)) - (b * 0.0638541728f));
  let s_ = ((L - (a * 0.0894841775f)) - (b * 1.291485548f));
  let l = pow(l_, 3f);
  let m = pow(m_, 3f);
  let s = pow(s_, 3f);
  return vec3f((((l * 4.0767416621f) - (m * 3.3077115913f)) + (s * 0.2309699292f)), (((l * -1.2684380046f) + (m * 2.6097574011f)) - (s * 0.3413193965f)), (((l * -0.0041960863f) - (m * 0.7034186147f)) + (s * 1.707614701f)));
}

fn sRGBToP3(srgb: vec3f) -> vec3f {
  let r = (((srgb.x * 0.8224621f) + (srgb.y * 0.177538f)) + (srgb.z * 0f));
  let g = (((srgb.x * 0.0331941f) + (srgb.y * 0.9668058f)) + (srgb.z * 0f));
  let b = (((srgb.x * 0.0170826f) + (srgb.y * 0.0723974f)) + (srgb.z * 0.9105199f));
  return vec3f(r, g, b);
}

fn mixColors(colorA: vec4f, colorB: vec4f, t: f32) -> vec4f {
  let weightA = (colorA.w * (1f - t));
  let weightB = (colorB.w * t);
  let totalWeight = (weightA + weightB);
  let safeWeight = max(totalWeight, 1e-3f);
  let oklchA = oklabToOklch(rgbToOklab(p3ToSRGB(colorA.xyz)));
  let oklchB = oklabToOklch(rgbToOklab(p3ToSRGB(colorB.xyz)));
  let mixed = awMix(oklchA, oklchB, weightA, weightB, safeWeight);
  let rgb = sRGBToP3(oklabToRgb(oklchToOklab(mixed)));
  return vec4f(rgb, totalWeight);
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct struct_1 {
  colorLow: vec4f,
  colorMid: vec4f,
  colorHigh: vec4f,
  speed: f32,
  contrast: f32,
  blackPoint: f32,
  whitePoint: f32,
  strength: f32,
  colorSpace: f32,
  _opacity: f32,
}

struct padded_1 {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct struct_2 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_gm: struct_1,
  n_gen: padded_1,
  _sys: struct_2,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

fn gradientMapCustomPhase(t: f32, phase: f32) -> vec2f {
  let t01 = fract((t + phase));
  let t3 = (t01 * 3f);
  return vec2f(fract(t3), floor(t3));
}

fn gradientMapT(color: vec4f, black: f32, white: f32, contrast: f32) -> f32 {
  let luma = dot(color.xyz, vec3f(0.2125999927520752, 0.7152000069618225, 0.0722000002861023));
  let range = max((white - black), 1e-4f);
  var t = clamp(((luma - black) / range), 0f, 1f);
  t = clamp((((t - 0.5f) * contrast) + 0.5f), 0f, 1f);
  return t;
}

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  var composed_0 = gradientMapCompose(genBody(uv), (gradientMapSelect(mixColors(uniforms.n_gm.colorLow, uniforms.n_gm.colorMid, (gradientMapCustomPhase(gradientMapT(genBody(uv), uniforms.n_gm.blackPoint, uniforms.n_gm.whitePoint, uniforms.n_gm.contrast), (uniforms.n_gm.speed * uniforms._sys.time))).x), mixColors(uniforms.n_gm.colorMid, uniforms.n_gm.colorHigh, (gradientMapCustomPhase(gradientMapT(genBody(uv), uniforms.n_gm.blackPoint, uniforms.n_gm.whitePoint, uniforms.n_gm.contrast), (uniforms.n_gm.speed * uniforms._sys.time))).x), mixColors(uniforms.n_gm.colorHigh, uniforms.n_gm.colorLow, (gradientMapCustomPhase(gradientMapT(genBody(uv), uniforms.n_gm.blackPoint, uniforms.n_gm.whitePoint, uniforms.n_gm.contrast), (uniforms.n_gm.speed * uniforms._sys.time))).x), (gradientMapCustomPhase(gradientMapT(genBody(uv), uniforms.n_gm.blackPoint, uniforms.n_gm.whitePoint, uniforms.n_gm.contrast), (uniforms.n_gm.speed * uniforms._sys.time))).y)).rgb, uniforms.n_gm.strength);
  return vec4f(linearToSrgb(tone_linear(composed_0.rgb)), composed_0.a);
}"
`;
